# map-generator

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: check-workspace.yml  deploy-lambda.yml
generator-cli/: Cargo.toml
generator-cli/src/: main.rs
generator-core/: Cargo.toml
generator-core/src/: constants.rs  lib.rs  types.rs
generator-core/src/algos/: mod.rs  polygon_builder.rs
generator-core/src/algos/map_builder/: add_doors.rs  bisect_rooms.rs  bsp.rs  builder_config.rs  connect_regions.rs  gen_rooms.rs  merge_regions.rs  merge_rooms.rs  mod.rs  reconnect_rooms.rs
generator-core/src/algos/map_builder/room_decorator/: castlevania.rs  metroid.rs  mod.rs
generator-core/src/algos/map_drawer/: castlevania.rs  mod.rs
generator-core/src/algos/map_drawer/metroid/: mod.rs
generator-core/src/algos/map_drawer/metroid/door_drawer/: fusion.rs  mod.rs  super_metroid.rs  zero_mission.rs
generator-core/src/algos/map_drawer/metroid/region_connector/: fusion.rs  mod.rs  super_metroid.rs  zero_mission.rs
generator-lambda/: Cargo.toml  README.md
generator-lambda/src/: event_handler.rs  main.rs
generator-server/: Cargo.toml
generator-server/src/: config.rs  main.rs
generator-server/src/domain/: models.rs  ports.rs  service.rs
generator-server/src/inbound/: api.rs  handlers.rs  mod.rs
generator-server/src/outbound/: mod.rs
generator-server/src/outbound/metrics/: mod.rs
generator-server/src/outbound/notifiers/: mod.rs
generator-server/src/outbound/repositories/: mod.rs
generator-ui/: Cargo.toml  README.md
generator-ui/src/: main.rs  worker.rs
generator-ui/ui/: app-window.slint
src/: algo.rs  consants.rs  constants.rs  main.rs  types.rs
src/algos/: bsp.rs  mod.rs  polygon_builder.rs
src/algos/map_builder/: add_doors.rs  bsp.rs  connect_regions.rs  decorate_rooms.rs  gen_rooms.rs  merge_rooms.rs  mod.rs  reconnect_rooms.rs
src/algos/map_builder/room_decorator/: castlevania.rs  metroid.rs  mod.rs
src/algos/map_drawer/: castlevania.rs  mod.rs
src/algos/map_drawer/metroid/: mod.rs
src/algos/map_drawer/metroid/door_drawer/: fusion.rs
src/algos/map_drawer/metroid/region_connector/: mod.rs
