[workspace.package]
edition = "2024"
rust-version = "1.87"

[workspace]
resolver = "3"
members = [
    "generator-core",
    "generator-cli",
    "generator-server",
    "generator-ui",
    "generator-lambda",
]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
axum = { version = "0.8", default-features = false }
aws-config = { version = "1.8.0" }
aws-sdk-s3 = { version = "1.93.0" }
clap = { version = "4.0", default-features = false }
derive_more = { version = "2.0", default-features = false }
lambda_runtime = { version = "0.13", default-features = false }
priority-queue = { version = "2.0", default-features = false }
rand = { version = "0.9", default-features = false }
rayon = { version = "1.10", default-features = false }
resvg = { version = "0.45", default-features = false }
serde = { version = "1.0", default-features = false }
slint = { version = "1.8.0", default-features = false }
slint-build = { version = "1.8.0", default-features = false }
svg = { version = "0.18.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.0", default-features = false }
tower-http = { version = "0.6", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
tinyset = { version = "0.5", default-features = false }
tiny-skia = { version = "0.11.4", default-features = false }
uuid = { version = "1.0", default-features = false }
usvg = { version = "0.45", default-features = false }

generator-core = { path = "generator-core", default-features = false }
generator-cli = { path = "generator-cli", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
