[package]
name = "generator-core"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
priority-queue = { workspace = true, features = ["std"] }
rand = { workspace = true, features = ["thread_rng"] }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
svg = { workspace = true }
tinyset = { workspace = true }
tracing = { workspace = true, features = ["std"] }

[features]
cli = ["clap/derive"]
style-ord-hash = []
style-try-from-str = []
