[package]
name = "generator-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws_lambda_events = { workspace = true, features = ["eventbridge"] }
aws-sdk-s3 = { workspace = true }
lambda_runtime = { workspace = true, features = ["tracing", "anyhow"] }

tokio = { workspace = true, features = ["macros"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

generator-core = { workspace = true }
