[package]
name = "generator-server"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = [
    "http1",
    "json",
    "tokio",
    "tower-log",
    "tracing",
] }
derive_more = { workspace = true, features = ["from"] }
serde = { workspace = true, features = ["derive"] }
svg = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net"] }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["std", "fmt"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }

generator-core = { workspace = true, features = ["style-ord-hash", "style-try-from-str"] }
