[package]
name = "generator-ui"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true

[dependencies]
resvg = { workspace = true, default-features = true }
slint = { workspace = true, default-features = true }
tiny-skia = { workspace = true, default-features = true }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["std"] }
usvg = { workspace = true, default-features = true }
svg = { workspace = true }

generator-core = { workspace = true, features = ["style-try-from-str"] }

[build-dependencies]
slint-build = { workspace = true, default-features = true }
